capture key strokes and push to an array that gets joined to a string

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 </head>
 <body>
 <script>
+  const pressed = [];
+  const secretCode = 'wesbos';
+
+
+  window.addEventListener('keyup', function(e) {
+    console.log(e.key);
+    pressed.push(e.key);
+    pressed.splice(6);
+    let joined = pressed.join('');
+    console.log(joined);
+
+  })
 </script>
 </body>
 </html>
