if first pressed char shows as meta pop off from beginning of pressed array

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 
   window.addEventListener('keyup', function(e) {
+    if(pressed[0] === 'Meta') {
+      pressed.pop();
+    }
     console.log(e.key);
     pressed.push(e.key);
     pressed.splice(6);
